--- a/detail.html
+++ b/detail.html
@@ -58,11 +58,11 @@
           <div class="row">
             <div class="col-8 col-lg-8">
               <p><strong>Sponsor</strong> : มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าธนบุรี</p>
-              <p><strong>Posted</strong> : 1 ตุลาคม 2560</p>
-              <p style="color: #FF8C3F;"><strong>จำนวนเงิน</strong>&nbsp;34,000 บาท</p>
+              <p><i class="fa fa-clock-o" aria-hidden="true"></i>&nbsp;<strong>Posted</strong> : 1 ตุลาคม 2560</p>
+              <p class="orange">จำนวนเงิน</p><p>34,000 บาท</p>
             </div>
             <div class="col-4 col-lg-4">
-              <p style="color: #FF8C3F;"><strong>ระยะเวลาการขอรับทุน</strong></p>
+              <p class="orange-details">ระยะเวลาการขอรับทุน</p>
               <p>1 ต.ค. - 2 พ.ย. 2560</p>
             </div>
           </div>
@@ -118,7 +118,7 @@
         </div><!--/span-->
 
         <div class="col-6 col-md-3 sidebar-offcanvas" id="sidebar">
-          <p class=""><a href="#">กลับสู่หน้าค้นหา</a></p>
+          <a class="back-detail" href="#">&lt; กลับสู่หน้าค้นหา</a>
           <div class="list-group">
             <p>ทุนที่ลักษณะคล้ายกัน</p>
             <button class="buttonLists"><span>ทุนการศึกษาเอสโซ่ </span></button>
@@ -158,10 +158,10 @@
       <button onclick="topFunction()" id="myBtn" title="Go to top"></button>
       <p class="float-right" style="color: #999D9F">Have a feedback? <a href="#" class="badge2 badge-light2 skip" style="font-size: 1rem;">Let us know</a></p>
       <div>
-        <a href="#" class="fa fa-facebook"></a>
-        <a href="#" class="fa fa-twitter"></a>
-        <a href="#" class="fa fa-google"></a>
-        <a href="#" class="fa fa-linkedin"></a>
+        <a href="#" class="fa fa-facebook icons"></a>
+        <a href="#" class="fa fa-twitter icons"></a>
+        <a href="#" class="fa fa-google icons"></a>
+        <a href="#" class="fa fa-linkedin icons"></a>
       </div>
     </footer>
 
