--- a/home.html
+++ b/home.html
@@ -76,12 +76,12 @@
               <img src="images/human-16.png" alt="Generic placeholder image" width="160" height="160">
               <h4>กรอกข้อมูลส่วนตัว</h4>
             </div>
-            <i class="fa fa-chevron-right" style="font-size:200%;"></i>
+            <i class="fa fa-angle-right" style="font-size:200%;"></i>
             <div class="col-lg-4">
               <img src="images/com-16.png" alt="Generic placeholder image" width="240" height="160">
               <h4>ค้นหาทุนการศึกษา</h4>
             </div>
-            <i class="fa fa-chevron-right" style="font-size:200%;"></i>
+            <i class="fa fa-angle-right" style="font-size:200%;"></i>
             <div class="col-lg-4">
               <img src="images/garantee-16.png" alt="Generic placeholder image" width="140" height="160">
               <h4>ทุนที่เหมาะสม</h4>
@@ -189,10 +189,10 @@
                     02 470 8107<br>
                     02 470 8098<br>
             </address>
-            <a href="#" class="fa fa-facebook"></a>
-            <a href="#" class="fa fa-twitter"></a>
-            <a href="#" class="fa fa-google"></a>
-            <a href="#" class="fa fa-linkedin"></a>
+            <a href="#" class="fa fa-facebook icons"></a>
+            <a href="#" class="fa fa-twitter icons"></a>
+            <a href="#" class="fa fa-google icons"></a>
+            <a href="#" class="fa fa-linkedin icons"></a>
           </div>
           <div class="col-md-6 order-md-1">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3877.097290879398!2d100.49282151398339!3d13.651845390412218!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e2a251bb6b0cf1%3A0xf656e94ff13324ad!2sKing+Mongkut&#39;s+University+of+Technology+Thonburi!5e0!3m2!1sen!2sth!4v1514469635144" width="500" height="375" frameborder="0" style="border:0; border-radius: 0.625rem; box-shadow:0px 4px 17px 2px rgba(130,130,130,.5);" allowfullscreen></iframe>
