--- a/detail.html
+++ b/detail.html
@@ -145,7 +145,7 @@
               </div>
             </div>
           </div>
-          <p>คุณศุริษา แสงอรุณ (พี่เมี้ยว)<br>ติดต่อ 02 4708107</p>
+          <p style="margin: 1rem;">คุณศุริษา แสงอรุณ (พี่เมี้ยว)<br>ติดต่อ 02 4708107</p>
         </div><!--/span-->
       </div><!--/row-->
 
@@ -153,15 +153,28 @@
 
     </main><!--/.container-->
 
+    <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-angle-up" style="font-size: 150%;" aria-hidden="true"></i></button>
+
     <!-- FOOTER -->
     <footer class="foot">
-      <button onclick="topFunction()" id="myBtn" title="Go to top"></button>
-      <p class="float-right" style="color: #999D9F">Have a feedback? <a href="#" class="badge2 badge-light2 skip" style="font-size: 1rem;">Let us know</a></p>
-      <div>
-        <a href="#" class="fa fa-facebook icons"></a>
-        <a href="#" class="fa fa-twitter icons"></a>
-        <a href="#" class="fa fa-google icons"></a>
-        <a href="#" class="fa fa-linkedin icons"></a>
+      <div class="row">
+        <div class="col-6 col-lg-3">
+          <p class="phone">02-939393</p>
+        </div>
+        <div class="col-6 col-lg-3 foot-padding">
+          <a href="#" class="fa fa-facebook icons-2"></a>
+          <a href="#" class="fa fa-twitter icons-2"></a>
+          <a href="#" class="fa fa-google icons-2"></a>
+          <a href="#" class="fa fa-linkedin icons-2"></a>
+        </div>
+        <div class="col-6 col-lg-3">
+          <p class="feedback">Have a feedback?</p>
+          <div style="padding-top:0.8rem;">
+            <a href="#" class="badge2 badge-light2 skip" style="font-size: 1rem;">Let us know</a>
+          </div>
+        </div>
+        <div class="col-6 col-lg-3"></div>
+        </div>
       </div>
     </footer>
 
