--- a/detail.html
+++ b/detail.html
@@ -121,7 +121,7 @@
           <a class="back-detail" href="#">&lt; กลับสู่หน้าค้นหา</a>
           <div class="list-group">
             <p>ทุนที่ลักษณะคล้ายกัน</p>
-            <button class="buttonLists"><span>ทุนการศึกษาเอสโซ่ </span></button>
+            <button class="buttonLists"><span>ทุนการศึกษาเอสโซ่ </span><p class="caption">สมโภชกรุงรัตนโกสินทร์ 200 ปี</p></button>
             <button class="buttonLists"><span>ทุนบุณรอด </span></button>
             <div class="boxs">
               <iframe src="https://www.youtube.com/embed/XGSy3_Czz8k"></iframe>
@@ -167,13 +167,12 @@
           <a href="#" class="fa fa-google icons-2"></a>
           <a href="#" class="fa fa-linkedin icons-2"></a>
         </div>
-        <div class="col-6 col-lg-3">
+        <div class="col-6 col-lg-6">
           <p class="feedback">Have a feedback?</p>
           <div style="padding-top:0.8rem;">
             <a href="#" class="badge2 badge-light2 skip" style="font-size: 1rem;">Let us know</a>
           </div>
         </div>
-        <div class="col-6 col-lg-3"></div>
         </div>
       </div>
     </footer>
@@ -188,19 +187,6 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/offcanvas.js"></script>
     <!-- Go to top -->
-    <script type="text/javascript">
-      window.onscroll = function() {scrollFunction()};
-      function scrollFunction() {
-        if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-              document.getElementById("myBtn").style.display = "block";}
-        else {
-              document.getElementById("myBtn").style.display = "none";}
-      }
-
-      // When the user clicks on the button, scroll to the top of the document
-      function topFunction() {
-          document.body.scrollTop = 0; // For Safari
-          document.documentElement.scrollTop = 0;} // For Chrome, Firefox, IE and Opera
-    </script>
+    <script src="js/gototop.js"></script>
   </body>
 </html>
