--- a/home.html
+++ b/home.html
@@ -38,13 +38,13 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link2 menu js-scroll-trigger" alt="หน้าแรก" href="#about">หน้าแรก</a>
+              <a class="nav-link2 menu-index js-scroll-trigger" alt="หน้าแรก" href="#about">หน้าแรก</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link2 menu js-scroll-trigger" href="#services">ค้นหาทุน</a>
+              <a class="nav-link2 menu-index js-scroll-trigger" href="#services">ค้นหาทุน</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link2 menu js-scroll-trigger" href="#contact">ติดต่อ</a>
+              <a class="nav-link2 menu-index js-scroll-trigger" href="#contact">ติดต่อ</a>
             </li>
             <li class="dropdown">
             <a href="#" class="dropdown-toggle nav-link2" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ภาษาไทย <span class="caret"></span></a>
@@ -204,7 +204,7 @@
     <!-- Footer -->
     <footer class="foot">
       <div class="container">
-        <p class="float-right" style="color: #999D9F;">Have a feedback? <a href="#" class="badge2 badge-light2 skip" style="font-size: 1rem;">Let us know</a></p>
+        <p class="feedback" style="float: right;">Have a feedback? <a href="#" class="badge2 badge-light2 skip" style="font-size: 1rem;">Let us know</a></p>
       </div>
       <!-- /.container -->
     </footer>
