--- a/2cards.html
+++ b/2cards.html
@@ -26,7 +26,7 @@
       <!-- Navigation -->
     <nav class="navbar navbar-expand-md navbar-dark bg-gray fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#page-top"><img class="logo" style="position: absolute;top:0;" src="images/logo2.png"></a>
+        <a class="navbar-brand" href="#"><img class="logo" style="position: absolute;top:0;" src="images/logo2.png"></a>
         <p class="logo-caption">Scholarship showroom</p>
         <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -151,13 +151,11 @@
             <div class="col-md-4 col-sm-3 placeholder"></div> -->
 
             <div class="col-md-4 col-sm-3 placeholder">
-              <img src="data:image/gif;base64,R0lGODlhAQABAIABAAJ12AAAACwAAAAAAQABAAACAkQBADs=" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
-
-<!-- <div class="card">
+<div class="card">
   <div class="topcard">
     <p>Fleece Marigold</p>
   </div>
-</div> -->
+</div>
               <h4>Label</h4>
               <div class="text-muted">Something else</div>
             </div>
