--- a/detail.html
+++ b/detail.html
@@ -27,7 +27,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-gray fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger"  href="#page-top"><img class="logo" style="position: absolute;top:0;" src="images/logo2.png"></a>
+        <a class="navbar-brand js-scroll-trigger"  href="#"><img class="logo" style="position: absolute;top:0;" src="images/logo2.png"></a>
         <p class="logo-caption">Scholarship showroom</p>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -55,9 +55,9 @@
             <button type="button" class="btn btn-primary btn-sm" data-toggle="offcanvas">Toggle nav</button>
           </p>
           <h3>ทุนเพชรพระจอมเกล้าปริญญาตรี</h3>
+          <p><strong>Sponsor</strong> : มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าธนบุรี</p>
           <div class="row">
             <div class="col-8 col-lg-8">
-              <p><strong>Sponsor</strong> : มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าธนบุรี</p>
               <p><i class="fa fa-clock-o" aria-hidden="true"></i>&nbsp;<strong>Posted</strong> : 1 ตุลาคม 2560</p>
               <p class="orange">จำนวนเงิน</p><p>34,000 บาท</p>
             </div>
