--- a/2cards.html
+++ b/2cards.html
@@ -142,41 +142,37 @@
             </div>
 
             <div class="col-md-12 placeholder type">
-<a id="aTag" href="javascript:toggleAndChangeText();">
-   <i class="fa fa-angle-down" aria-hidden="true"></i>&nbsp;ทุนกู้ยืม
-</a>
-<div id="divToToggle">
-
-            <!-- <div class="col-md-4 col-sm-3 placeholder"></div>
-            <div class="col-md-4 col-sm-3 placeholder"></div> -->
-
-            <div class="col-md-4 col-sm-3 placeholder">
-<div class="card">
+              <a id="aTag" href="javascript:toggleAndChangeText();">
+                <i class="fa fa-angle-down" aria-hidden="true"></i>&nbsp;ทุนกู้ยืม
+              </a>
+              <div id="divToToggle" class="row">
+                <div class="col-md-4 col-sm-3 placeholder">
+<!-- <div class="card">
   <div class="topcard">
     <p>Fleece Marigold</p>
   </div>
-</div>
-              <h4>Label</h4>
-              <div class="text-muted">Something else</div>
-            </div>
+</div> -->
+                  <div>
+                      <a class="card" href="#">
+                        <span class="topcard">
+                        </span>
+                      </a>
+                  </div>
+                </div>
 
-            <div class="col-md-4 col-sm-3 placeholder">
-              <img src="data:image/gif;base64,R0lGODlhAQABAIABAADcgwAAACwAAAAAAQABAAACAkQBADs=" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
-              <h4>Label</h4>
-              <span class="text-muted">Something else</span>
+                <div class="col-md-4 col-sm-3 placeholder">
+                  <img src="data:image/gif;base64,R0lGODlhAQABAIABAADcgwAAACwAAAAAAQABAAACAkQBADs=" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
+                </div>
+
+                <div class="col-md-4 col-sm-3 placeholder">
+                  <img src="data:image/gif;base64,R0lGODlhAQABAIABAAJ12AAAACwAAAAAAQABAAACAkQBADs=" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
+                </div>
+
+                <div class="col-md-4 col-sm-3 placeholder">
+                  <img src="data:image/gif;base64,R0lGODlhAQABAIABAADcgwAAACwAAAAAAQABAAACAkQBADs=" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
+                </div>
+              </div>
             </div>
-            <div class="col-md-4 col-sm-3 placeholder">
-              <img src="data:image/gif;base64,R0lGODlhAQABAIABAAJ12AAAACwAAAAAAQABAAACAkQBADs=" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
-              <h4>Label</h4>
-              <span class="text-muted">Something else</span>
-            </div>
-            <div class="col-md-4 col-sm-3 placeholder">
-              <img src="data:image/gif;base64,R0lGODlhAQABAIABAADcgwAAACwAAAAAAQABAAACAkQBADs=" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
-              <h4>Label</h4>
-              <span class="t ext-muted">Something else</span>
-            </div>
-  </div>
-</div>
           </section>
 
           <h2>Section title</h2>
