--- a/detail.html
+++ b/detail.html
@@ -35,7 +35,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="dropdown">
-            <a href="#" class="dropdown-toggle nav-link2" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ภาษาไทย <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle nav-link2" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ภาษาไทย <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li><a class="drop-selector" href="#">ภาษาไทย</a></li>
               <li><a class="drop-selector" href="#">English</a></li>
