--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
               <a class="nav-link2 menu-index js-scroll-trigger" href="#contact">ติดต่อ</a>
             </li>
             <li class="dropdown">
-            <a href="#" class="dropdown-toggle nav-link2" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ภาษาไทย <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle nav-link2" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ภาษาไทย <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li><a class="drop-selector" href="#">ภาษาไทย</a></li>
               <li><a class="drop-selector" href="#">English</a></li>
