--- a/2cards.html
+++ b/2cards.html
@@ -177,19 +177,9 @@
                         <span class="bg-logo">
                           <img src="images/kawasaki.png">
                         </span>
-                      </a>
-                  </div>
-                </div>
-
-                <div class="col-md-4 col-sm-3 placeholder">
-                  <div>
-                      <a class="card" href="#">
-                        <span class="topcard">
-                          <p class="name-details">กองทุนเงินกู้ยืมเพื่อการศึกษา</p>
-                          <p class="name-details-caption">กยศ.</p>
-                        </span>
-                        <span class="bg-logo">
-                          <img src="images/kys.jpg">
+                        <span class="caption-details">
+                          <p>จำนวนเงิน</p>
+                          <p>เปิดรับสมัคร</p>
                         </span>
                       </a>
                   </div>
@@ -205,19 +195,9 @@
                         <span class="bg-logo">
                           <img src="images/kys.jpg">
                         </span>
-                      </a>
-                  </div>
-                </div>
-
-                <div class="col-md-4 col-sm-3 placeholder">
-                  <div>
-                      <a class="card" href="#">
-                        <span class="topcard">
-                          <p class="name-details">กองทุนเงินกู้ยืมเพื่อการศึกษา</p>
-                          <p class="name-details-caption">กยศ.</p>
-                        </span>
-                        <span class="bg-logo">
-                          <img src="images/kys.jpg">
+                        <span class="caption-details">
+                          <p>จำนวนเงิน</p>
+                          <p>เปิดรับสมัคร</p>
                         </span>
                       </a>
                   </div>
@@ -232,6 +212,46 @@
                         </span>
                         <span class="bg-logo">
                           <img src="images/kys.jpg">
+                        </span>
+                        <span class="caption-details">
+                          <p>จำนวนเงิน</p>
+                          <p>เปิดรับสมัคร</p>
+                        </span>
+                      </a>
+                  </div>
+                </div>
+
+                <div class="col-md-4 col-sm-3 placeholder">
+                  <div>
+                      <a class="card" href="#">
+                        <span class="topcard">
+                          <p class="name-details">กองทุนเงินกู้ยืมเพื่อการศึกษา</p>
+                          <p class="name-details-caption">กยศ.</p>
+                        </span>
+                        <span class="bg-logo">
+                          <img src="images/kys.jpg">
+                        </span>
+                        <span class="caption-details">
+                          <p>จำนวนเงิน</p>
+                          <p>เปิดรับสมัคร</p>
+                        </span>
+                      </a>
+                  </div>
+                </div>
+
+                <div class="col-md-4 col-sm-3 placeholder">
+                  <div>
+                      <a class="card" href="#">
+                        <span class="topcard">
+                          <p class="name-details">กองทุนเงินกู้ยืมเพื่อการศึกษา</p>
+                          <p class="name-details-caption">กยศ.</p>
+                        </span>
+                        <span class="bg-logo">
+                          <img src="images/kys.jpg">
+                        </span>
+                        <span class="caption-details">
+                          <p>จำนวนเงิน</p>
+                          <p>เปิดรับสมัคร</p>
                         </span>
                       </a>
                   </div>
