ยังไม่ได้แก้อะไรมากนะคะ ติด details รูปข้างๆโปสเตอร์

--- a/detail.html
+++ b/detail.html
@@ -134,29 +134,49 @@
           <p style="margin: 1rem;">คุณศุริษา แสงอรุณ (พี่เมี้ยว)<br>ติดต่อ 02 4708107</p>
         </div><!--/span-->
       </div><!--/row-->
+
     <section>
+
       <div class="row">
         <div class="col-6 col-lg-4">
           <img class="detailsImg" src="images/poster.jpg">
         </div>
-        <div class="col-6 col-lg-8">
+
+        <div class="col-6 col-lg-4">
+          <div class="img-gradient">
+            <img src="images/1.jpg" class="img-fluid" alt="Responsive image">
+          </div>
+        </div>
+
+        <div class="col-6 col-lg-4">
           <div id="lines3"></div>
           <div id="lines4"></div>
-          <div> 
-            <div class="img-gradient">
-            <img src="images/1.jpg">
-          </div>
-
-            <div style="position:relative;top:0;left:45%;z-index:200;"> นักศึกษาทุนเพชรพระจอมเกล้า<br>
+          <div>
+          <p>นักศึกษาทุนเพชรพระจอมเกล้า<br>
 ด้านผู้นำมีส่วนร่วมในการจัดกิจกรรม<br>
 ที่เป็นประโยชน์ต่อมหาวิทยาลัยและส่วนรวม<br>สมกับเป็นนักศึกษาของมหาวิทยาลัย<br>
-เทคโนโลยีพระจอมเกล้าธนบุรี
-            </div>
-            <div id="lines5"></div>
-            <div id="lines6"></div>
-          </div><!--/span-->
-
-        </div><!--/span-->
+เทคโนโลยีพระจอมเกล้าธนบุรี</p>
+          </div>
+          <div class="img-gradient-2">
+            <img src="images/1.jpg" class="img-fluid" alt="Responsive image">
+          </div>
+        </div>
+        <!-- <div class="col-6 col-lg-4">
+          <div id="lines3"></div>
+          <div id="lines4"></div>
+              
+          <div class="img-gradient">
+            <img src="images/1.jpg" class="img-fluid" alt="Responsive image">
+          </div>
+        </div>
+        <div class="col-6 col-lg-4">
+          <p>นักศึกษาทุนเพชรพระจอมเกล้า<br>
+ด้านผู้นำมีส่วนร่วมในการจัดกิจกรรม<br>
+ที่เป็นประโยชน์ต่อมหาวิทยาลัยและส่วนรวม<br>สมกับเป็นนักศึกษาของมหาวิทยาลัย<br>
+เทคโนโลยีพระจอมเกล้าธนบุรี</p>
+          <div id="lines5"></div>
+          <div id="lines6"></div>
+        </div> --><!--/span-->
       </div><!--/row-->
     </section>
       <hr>
@@ -168,25 +188,25 @@
     <!-- FOOTER -->
     <footer class="foot">
       <div class="row">
-        <div class="col-6 col-lg-3">
+        <div class="col col-lg-2">
           <p class="phone">02-939393</p>
         </div>
-        <div class="col-6 col-lg-3 foot-padding">
+        <div class="col-12 col-md-auto foot-padding">
           <a href="#" class="fa fa-facebook icons-2"></a>
           <a href="#" class="fa fa-twitter icons-2"></a>
           <a href="#" class="fa fa-google icons-2"></a>
           <a href="#" class="fa fa-linkedin icons-2"></a>
         </div>
-        <div class="col-6 col-lg-6">
-          <p class="feedback">Have a feedback?</p>
+        <div class="col">
+          <!-- <p class="feedback">Have a feedback?</p>
           <div style="padding-top:0.8rem;">
             <a href="#" class="badge2 badge-light2 skip" style="font-size: 1rem;">Let us know</a>
-          </div>
+          </div> -->
+          <p class="feedback" style="float: right; padding-right: 9%;">Have a feedback? <a href="#" class="badge2 badge-light2 skip" style="font-size: 1rem;">Let us know</a></p>
         </div>
         </div>
       </div>
     </footer>
-
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
@@ -198,5 +218,7 @@
     <script src="js/offcanvas.js"></script>
     <!-- Go to top -->
     <script src="js/gototop.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+
   </body>
 </html>
